remove braces around one-token args

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1565,7 +1565,7 @@
         \str_if_empty:NF \l_@@_property_str
           {
             \__kernel_msg_error:nnxx { kernel } { key-property-unknown }
-              { \l_@@_property_str } { \l_keys_path_str }
+              \l_@@_property_str \l_keys_path_str
           }
       }
   }
@@ -1649,9 +1649,8 @@
           \l_@@_property_str \s_@@_stop
           { \use:c { \c_@@_props_root_str \l_@@_property_str } }
           {
-            \__kernel_msg_error:nnxx { kernel }
-              { key-property-requires-value } { \l_@@_property_str }
-              { \l_keys_path_str }
+            \__kernel_msg_error:nnxx { kernel } { key-property-requires-value }
+              \l_@@_property_str \l_keys_path_str
           }
       }
       { \use:c { \c_@@_props_root_str \l_@@_property_str } {#1} }
@@ -1681,7 +1680,7 @@
     \@@_cmd_set:nn { \l_keys_path_str / unknown }
       {
         \__kernel_msg_error:nnx { kernel } { boolean-values-only }
-          { \l_keys_key_str }
+          \l_keys_key_str
       }
     \@@_default_set:n { true }
   }
@@ -1703,7 +1702,7 @@
     \@@_cmd_set:nn { \l_keys_path_str / unknown }
       {
         \__kernel_msg_error:nnx { kernel } { boolean-values-only }
-          { \l_keys_key_str }
+          \l_keys_key_str
       }
     \@@_default_set:n { true }
   }
@@ -1732,7 +1731,7 @@
           { choice }
           {
             \__kernel_msg_error:nnxx { kernel } { nested-choice-key }
-              { \l_keys_path_tl } { \@@_parent:o \l_keys_path_str }
+              \l_keys_path_tl { \@@_parent:o \l_keys_path_str }
           }
           { \@@_choice_make_aux:N #1 }
       }
@@ -1742,11 +1741,11 @@
   {
     \cs_set_nopar:cpn { \c_@@_type_root_str \l_keys_path_str }
       { choice }
-    \@@_cmd_set:nn { \l_keys_path_str } { #1 {##1} }
+    \@@_cmd_set:nn \l_keys_path_str { #1 {##1} }
     \@@_cmd_set:nn { \l_keys_path_str / unknown }
       {
         \__kernel_msg_error:nnxx { kernel } { key-choice-unknown }
-          { \l_keys_path_str } {##1}
+          \l_keys_path_str {##1}
       }
   }
 %    \end{macrocode}
@@ -1878,7 +1877,7 @@
       {
         \str_clear:N \l_@@_inherit_str
         \cs_if_exist:cT { \c_@@_code_root_str \l_keys_path_str }
-          { \@@_execute:nn { \l_keys_path_str } {#1} }
+          { \@@_execute:nn \l_keys_path_str {#1} }
       }
   }
 %    \end{macrocode}
@@ -1892,8 +1891,7 @@
   {
     \@@_cmd_set:Vo \l_keys_path_str
       {
-        \exp_after:wN \keys_set:nn
-        \exp_after:wN { \l_@@_module_str } {#1}
+        \exp_after:wN \keys_set:nn \exp_after:wN { \l_@@_module_str } {#1}
       }
   }
 \cs_new_protected:Npn \@@_meta_make:nn #1#2
@@ -1910,7 +1908,7 @@
     \prop_if_exist:NF #1 { \prop_new:N #1 }
     \exp_after:wN \@@_find_key_module:wNN \l_keys_path_str \s_@@_stop
       \l_@@_tmpa_tl \l_@@_tmpb_tl
-    \@@_cmd_set:nx { \l_keys_path_str }
+    \@@_cmd_set:nx \l_keys_path_str
       {
         \exp_not:c { prop_ #2 put:Nnn }
         \exp_not:N #1
@@ -1980,7 +1978,7 @@
     \bool_if:NF \l_@@_no_value_bool
       {
         \__kernel_msg_error:nnxx { kernel } { value-forbidden }
-          { \l_keys_path_str } { \l_keys_value_tl }
+          \l_keys_path_str \l_keys_value_tl
         \use_none:nnn
       }
   }
@@ -1989,7 +1987,7 @@
     \bool_if:NT \l_@@_no_value_bool
       {
         \__kernel_msg_error:nnx { kernel } { value-required }
-          { \l_keys_path_str }
+          \l_keys_path_str
         \use_none:nnn
       }
   }
@@ -2005,7 +2003,7 @@
 \cs_new_protected:Npn \@@_variable_set:NnnN #1#2#3#4
   {
     \use:c { #2_if_exist:NF } #1 { \use:c { #2 _new:N } #1 }
-    \@@_cmd_set:nx { \l_keys_path_str }
+    \@@_cmd_set:nx \l_keys_path_str
       {
         \exp_not:c { #2 _ #3 set:N #4 }
         \exp_not:N #1
@@ -2097,7 +2095,7 @@
 %   \texttt{set} function.
 %    \begin{macrocode}
 \cs_new_protected:cpn { \c_@@_props_root_str .code:n } #1
-  { \@@_cmd_set:nn { \l_keys_path_str } {#1} }
+  { \@@_cmd_set:nn \l_keys_path_str {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2434,7 +2432,7 @@
 \cs_new_protected:Npn \keys_set_known:nnN #1#2#3
   {
     \exp_args:No \@@_set_known:nnnnN
-      \l_@@_unused_clist { \q_@@_no_value } {#1} {#2} #3
+      \l_@@_unused_clist \q_@@_no_value {#1} {#2} #3
   }
 \cs_generate_variant:Nn \keys_set_known:nnN { nV , nv , no }
 \cs_new_protected:Npn \keys_set_known:nnnN #1#2#3#4
@@ -2447,11 +2445,11 @@
   {
     \clist_clear:N \l_@@_unused_clist
     \@@_set_known:nnn {#2} {#3} {#4}
-    \tl_set:Nx #5 { \exp_not:o { \l_@@_unused_clist } }
+    \tl_set:Nx #5 { \exp_not:o \l_@@_unused_clist }
     \tl_set:Nn \l_@@_unused_clist {#1}
   }
 \cs_new_protected:Npn \keys_set_known:nn #1#2
-  { \@@_set_known:nnn { \q_@@_no_value } {#1} {#2} }
+  { \@@_set_known:nnn \q_@@_no_value {#1} {#2} }
 \cs_generate_variant:Nn \keys_set_known:nn { nV , nv , no }
 \cs_new_protected:Npn \@@_set_known:nnn #1#2#3
   {
@@ -2512,7 +2510,7 @@
   {
     \exp_args:No \@@_set_filter:nnnnnN
       \l_@@_unused_clist
-        { \q_@@_no_value } {#1} {#2} {#3} #4
+        \q_@@_no_value {#1} {#2} {#3} #4
   }
 \cs_generate_variant:Nn \keys_set_filter:nnnN { nnV , nnv , nno }
 \cs_new_protected:Npn \keys_set_filter:nnnnN #1#2#3#4#5
@@ -2525,11 +2523,11 @@
   {
     \clist_clear:N \l_@@_unused_clist
     \@@_set_filter:nnnn {#2} {#3} {#4} {#5}
-    \tl_set:Nx #6 { \exp_not:o { \l_@@_unused_clist } }
+    \tl_set:Nx #6 { \exp_not:o \l_@@_unused_clist }
     \tl_set:Nn \l_@@_unused_clist {#1}
   }
 \cs_new_protected:Npn \keys_set_filter:nnn #1#2#3
-  {\@@_set_filter:nnnn { \q_@@_no_value } {#1} {#2} {#3} }
+  {\@@_set_filter:nnnn \q_@@_no_value {#1} {#2} {#3} }
 \cs_generate_variant:Nn \keys_set_filter:nnn { nnV , nnv , nno }
 \cs_new_protected:Npn \@@_set_filter:nnnn #1#2#3#4
   {
@@ -2637,8 +2635,8 @@
     \tl_set_eq:NN \l_keys_key_tl \l_keys_key_str
     \@@_value_or_default:n {#3}
     \bool_if:NTF \l_@@_selective_bool
-      { \@@_set_selective: }
-      { \@@_execute: }
+      \@@_set_selective:
+      \@@_execute:
     \str_set:Nn \l_@@_module_str {#1}
   }
 \cs_generate_variant:Nn \@@_set_keyval:nnn { o }
@@ -2689,8 +2687,8 @@
       }
       {
         \bool_if:NTF \l_@@_filtered_bool
-          { \@@_execute: }
-          { \@@_store_unused: }
+          \@@_execute:
+          \@@_store_unused:
       }
   }
 %    \end{macrocode}
@@ -2709,20 +2707,20 @@
             \str_if_eq:nnT {##1} {####1}
               {
                 \bool_set_true:N \l_@@_tmp_bool
-                \clist_map_break:n { \seq_map_break: }
+                \clist_map_break:n \seq_map_break:
               }
           }
       }
     \bool_if:NTF \l_@@_tmp_bool
       {
         \bool_if:NTF \l_@@_filtered_bool
-          { \@@_store_unused: }
-          { \@@_execute: }
+          \@@_store_unused:
+          \@@_execute:
       }
       {
         \bool_if:NTF \l_@@_filtered_bool
-          { \@@_execute: }
-          { \@@_store_unused: }
+          \@@_execute:
+          \@@_store_unused:
       }
   }
 %    \end{macrocode}
@@ -2789,7 +2787,7 @@
     \cs_if_exist:cTF { \c_@@_code_root_str \l_keys_path_str }
       {
         \cs_if_exist_use:c { \c_@@_validate_root_str \l_keys_path_str }
-        \@@_execute:no { \l_keys_path_str } { \l_keys_value_tl }
+        \@@_execute:no \l_keys_path_str \l_keys_value_tl
       }
       {
         \cs_if_exist:cTF
@@ -2813,8 +2811,8 @@
           {
             \str_set:Nn \l_@@_inherit_str {##1}
             \cs_if_exist_use:c { \c_@@_validate_root_str ##1 / \l_keys_key_str }
-            \@@_execute:no { ##1 / \l_keys_key_str } { \l_keys_value_tl }
-            \clist_map_break:n { \use_none:n }
+            \@@_execute:no { ##1 / \l_keys_key_str } \l_keys_value_tl
+            \clist_map_break:n \use_none:n
           }
       }
     \@@_execute_unknown:
@@ -2826,10 +2824,10 @@
       {
         \cs_if_exist:cTF
           { \c_@@_code_root_str \l_@@_module_str / unknown }
-          { \@@_execute:no { \l_@@_module_str / unknown } { \l_keys_value_tl } }
+          { \@@_execute:no { \l_@@_module_str / unknown } \l_keys_value_tl }
           {
             \__kernel_msg_error:nnxx { kernel } { key-unknown }
-              { \l_keys_path_str } { \l_@@_module_str }
+              \l_keys_path_str \l_@@_module_str
           }
       }
   }
@@ -2869,7 +2867,7 @@
       {
         \clist_put_right:Nx \l_@@_unused_clist
           {
-            \exp_not:o \l_keys_key_str
+            \l_keys_key_str
             \bool_if:NF \l_@@_no_value_bool
               { = { \exp_not:o \l_keys_value_tl } }
           }
@@ -2879,7 +2877,7 @@
           {
             \clist_put_right:Nx \l_@@_unused_clist
               {
-                \exp_not:o \l_keys_path_str
+                \l_keys_path_str
                 \bool_if:NF \l_@@_no_value_bool
                   { = { \exp_not:o \l_keys_value_tl } }
               }
@@ -2936,7 +2934,7 @@
 \cs_new:Npn \@@_choice_find:n #1
   {
     \str_if_empty:NTF \l_@@_inherit_str
-      { \@@_choice_find:nn { \l_keys_path_str } {#1} }
+      { \@@_choice_find:nn \l_keys_path_str {#1} }
       {
         \@@_choice_find:nn
           { \l_@@_inherit_str / \l_keys_key_str } {#1}
