--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1519,21 +1519,21 @@
 % \subsection{The key defining mechanism}
 %
 % \begin{macro}{\keys_define:nn}
-% \begin{macro}{\@@_define:nnn, \@@_define:onn}
+% \begin{macro}{\@@_define:nnn}
 %   The public function for definitions is just a wrapper for the lower
 %   level mechanism, more or less. The outer function is designed to
 %   keep a track of the current module, to allow safe nesting. The module is set
-%   removing any leading |/| (which is not needed here).
+%   removing any leading |/| (which is not needed here). The first argument to
+%   |\@@_define:nnn| should always be a string.
 %    \begin{macrocode}
 \cs_new_protected:Npn \keys_define:nn
-  { \@@_define:onn \l_@@_module_str }
+  { \exp_args:No \@@_define:nnn \l_@@_module_str }
 \cs_new_protected:Npn \@@_define:nnn #1#2#3
   {
-    \str_set:Nx \l_@@_module_str { \@@_trim_spaces:n {#2} }
+    \cs_set_nopar:Npx \l_@@_module_str { \@@_trim_spaces:n {#2} }
     \keyval_parse:NNn \@@_define:n \@@_define:nn {#3}
-    \str_set:Nn \l_@@_module_str {#1}
+    \cs_set_nopar:Npn \l_@@_module_str {#1}
   }
-\cs_generate_variant:Nn \@@_define:nnn { o }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1551,10 +1551,10 @@
     \bool_set_true:N \l_@@_no_value_bool
     \@@_define_aux:nn {#1} { }
   }
-\cs_new_protected:Npn \@@_define:nn #1#2
+\cs_new_protected:Npn \@@_define:nn
   {
     \bool_set_false:N \l_@@_no_value_bool
-    \@@_define_aux:nn {#1} {#2}
+    \@@_define_aux:nn
   }
 \cs_new_protected:Npn \@@_define_aux:nn #1#2
   {
@@ -1754,19 +1754,18 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_choices_make:nn, \@@_multichoices_make:nn}
-% \begin{macro}{\@@_choices_make:Nnn}
+% \begin{macro}{\@@_choices_make_aux:nn}
 %   Auto-generating choices means setting up the root key as a choice, then
 %   defining each choice in turn.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_choices_make:nn
-  { \@@_choices_make:Nnn \@@_choice_make: }
+  { \@@_choice_make: \@@_choices_make_aux:nn }
 \cs_new_protected:Npn \@@_multichoices_make:nn
-  { \@@_choices_make:Nnn \@@_multichoice_make: }
-\cs_new_protected:Npn \@@_choices_make:Nnn #1#2#3
+  { \@@_multichoice_make: \@@_choices_make_aux:nn }
+\cs_new_protected:Npn \@@_choices_make_aux:nn #1#2
   {
-    #1
     \int_zero:N \l_keys_choice_int
-    \clist_map_inline:nn {#2}
+    \clist_map_inline:nn {#1}
       {
         \int_incr:N \l_keys_choice_int
         \@@_cmd_set:nx
@@ -1775,7 +1774,7 @@
             \tl_set:Nn \exp_not:N \l_keys_choice_tl {##1}
             \int_set:Nn \exp_not:N \l_keys_choice_int
               { \int_use:N \l_keys_choice_int }
-            \exp_not:n {#3}
+            \exp_not:n {#2}
           }
       }
   }
@@ -2094,8 +2093,8 @@
 %   Creating code is simply a case of passing through to the underlying
 %   \texttt{set} function.
 %    \begin{macrocode}
-\cs_new_protected:cpn { \c_@@_props_root_str .code:n } #1
-  { \@@_cmd_set:nn \l_keys_path_str {#1} }
+\cs_new_protected:cpn { \c_@@_props_root_str .code:n }
+  { \@@_cmd_set:nn \l_keys_path_str }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2142,14 +2141,14 @@
 % \begin{macro}{.default:n, .default:V, .default:o, .default:x}
 %   Expansion is left to the internal functions.
 %    \begin{macrocode}
-\cs_new_protected:cpn { \c_@@_props_root_str .default:n } #1
-  { \@@_default_set:n {#1} }
-\cs_new_protected:cpn { \c_@@_props_root_str .default:V } #1
-  { \exp_args:NV \@@_default_set:n #1 }
-\cs_new_protected:cpn { \c_@@_props_root_str .default:o } #1
-  { \exp_args:No \@@_default_set:n {#1} }
-\cs_new_protected:cpn { \c_@@_props_root_str .default:x } #1
-  { \exp_args:Nx \@@_default_set:n {#1} }
+\cs_new_protected:cpn { \c_@@_props_root_str .default:n }
+  { \@@_default_set:n }
+\cs_new_protected:cpn { \c_@@_props_root_str .default:V }
+  { \exp_args:NV \@@_default_set:n }
+\cs_new_protected:cpn { \c_@@_props_root_str .default:o }
+  { \exp_args:No \@@_default_set:n }
+\cs_new_protected:cpn { \c_@@_props_root_str .default:x }
+  { \exp_args:Nx \@@_default_set:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2188,30 +2187,30 @@
 % \begin{macro}{.groups:n}
 %   A single property to create groups of keys.
 %    \begin{macrocode}
-\cs_new_protected:cpn { \c_@@_props_root_str .groups:n } #1
-  { \@@_groups_set:n {#1} }
+\cs_new_protected:cpn { \c_@@_props_root_str .groups:n }
+  { \@@_groups_set:n }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{.inherit:n}
 %   Nothing complex: only one variant at the moment!
 %    \begin{macrocode}
-\cs_new_protected:cpn { \c_@@_props_root_str .inherit:n } #1
-  { \@@_inherit:n {#1} }
+\cs_new_protected:cpn { \c_@@_props_root_str .inherit:n }
+  { \@@_inherit:n }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{.initial:n, .initial:V, .initial:o, .initial:x}
 %   The standard hand-off approach.
 %    \begin{macrocode}
-\cs_new_protected:cpn { \c_@@_props_root_str .initial:n } #1
-  { \@@_initialise:n {#1} }
-\cs_new_protected:cpn { \c_@@_props_root_str .initial:V } #1
-  { \exp_args:NV \@@_initialise:n #1 }
-\cs_new_protected:cpn { \c_@@_props_root_str .initial:o } #1
-  { \exp_args:No \@@_initialise:n {#1} }
-\cs_new_protected:cpn { \c_@@_props_root_str .initial:x } #1
-  { \exp_args:Nx \@@_initialise:n {#1} }
+\cs_new_protected:cpn { \c_@@_props_root_str .initial:n }
+  { \@@_initialise:n }
+\cs_new_protected:cpn { \c_@@_props_root_str .initial:V }
+  { \exp_args:NV \@@_initialise:n }
+\cs_new_protected:cpn { \c_@@_props_root_str .initial:o }
+  { \exp_args:No \@@_initialise:n }
+\cs_new_protected:cpn { \c_@@_props_root_str .initial:x }
+  { \exp_args:Nx \@@_initialise:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2234,8 +2233,8 @@
 % \begin{macro}{.meta:n}
 %   Making a meta is handled internally.
 %    \begin{macrocode}
-\cs_new_protected:cpn { \c_@@_props_root_str .meta:n } #1
-  { \@@_meta_make:n {#1} }
+\cs_new_protected:cpn { \c_@@_props_root_str .meta:n }
+  { \@@_meta_make:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2355,10 +2354,10 @@
 % \begin{macro}{.value_required:n}
 %   These are very similar, so both call the same function.
 %    \begin{macrocode}
-\cs_new_protected:cpn { \c_@@_props_root_str .value_forbidden:n } #1
-  { \@@_value_requirement:nn { forbidden } {#1} }
-\cs_new_protected:cpn { \c_@@_props_root_str .value_required:n } #1
-  { \@@_value_requirement:nn { required } {#1} }
+\cs_new_protected:cpn { \c_@@_props_root_str .value_forbidden:n }
+  { \@@_value_requirement:nn { forbidden } }
+\cs_new_protected:cpn { \c_@@_props_root_str .value_required:n }
+  { \@@_value_requirement:nn { required } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -2371,17 +2370,17 @@
 %     \@@_set:nn
 %   }
 % \begin{macro}{\@@_set:nnn}
-%   A simple wrapper allowing for nesting.
+%   A simple wrapper allowing for nesting. The first argument to |\@@_set:nnn|
+%   should always be a string.
 %    \begin{macrocode}
 \cs_new_protected:Npn \keys_set:nn #1#2
   {
-    \use:x
+    \use:e
       {
         \bool_set_false:N \exp_not:N \l_@@_only_known_bool
         \bool_set_false:N \exp_not:N \l_@@_filtered_bool
         \bool_set_false:N \exp_not:N \l_@@_selective_bool
-        \tl_set:Nn \exp_not:N \l_@@_relative_tl
-          { \exp_not:N \q_@@_no_value }
+        \cs_set_eq:NN \exp_not:N \l_@@_relative_tl \exp_not:N \q_@@_no_value
         \@@_set:nn \exp_not:n { {#1} {#2} }
         \bool_if:NT \l_@@_only_known_bool
           { \bool_set_true:N \exp_not:N \l_@@_only_known_bool }
@@ -2394,13 +2393,13 @@
       }
   }
 \cs_generate_variant:Nn \keys_set:nn { nV , nv , no }
-\cs_new_protected:Npn \@@_set:nn #1#2
-  { \exp_args:No \@@_set:nnn \l_@@_module_str {#1} {#2} }
+\cs_new_protected:Npn \@@_set:nn
+  { \exp_args:No \@@_set:nnn \l_@@_module_str }
 \cs_new_protected:Npn \@@_set:nnn #1#2#3
   {
-    \str_set:Nx \l_@@_module_str { \@@_trim_spaces:n {#2} }
+    \cs_set_nopar:Npx \l_@@_module_str { \@@_trim_spaces:n {#2} }
     \keyval_parse:NNn \@@_set_keyval:n \@@_set_keyval:nn {#3}
-    \str_set:Nn \l_@@_module_str {#1}
+    \cs_set_nopar:Npn \l_@@_module_str {#1}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2429,31 +2428,31 @@
 %   afterwards. Note that for speed/simplicity reasons we use a \texttt{tl}
 %   operation to set the \texttt{clist} here!
 %    \begin{macrocode}
-\cs_new_protected:Npn \keys_set_known:nnN #1#2#3
+\cs_new_protected:Npn \keys_set_known:nnN
   {
     \exp_args:No \@@_set_known:nnnnN
-      \l_@@_unused_clist \q_@@_no_value {#1} {#2} #3
+      \l_@@_unused_clist \q_@@_no_value
   }
 \cs_generate_variant:Nn \keys_set_known:nnN { nV , nv , no }
-\cs_new_protected:Npn \keys_set_known:nnnN #1#2#3#4
+\cs_new_protected:Npn \keys_set_known:nnnN #1#2#3
   {
     \exp_args:No \@@_set_known:nnnnN
-      \l_@@_unused_clist {#3} {#1} {#2} #4
+      \l_@@_unused_clist {#3} {#1} {#2}
   }
 \cs_generate_variant:Nn \keys_set_known:nnnN { nV , nv , no }
 \cs_new_protected:Npn \@@_set_known:nnnnN #1#2#3#4#5
   {
     \clist_clear:N \l_@@_unused_clist
     \@@_set_known:nnn {#2} {#3} {#4}
-    \tl_set:Nx #5 { \exp_not:o \l_@@_unused_clist }
+    \cs_set_eq:NN #5 \l_@@_unused_clist
     \tl_set:Nn \l_@@_unused_clist {#1}
   }
-\cs_new_protected:Npn \keys_set_known:nn #1#2
-  { \@@_set_known:nnn \q_@@_no_value {#1} {#2} }
+\cs_new_protected:Npn \keys_set_known:nn
+  { \@@_set_known:nnn \q_@@_no_value }
 \cs_generate_variant:Nn \keys_set_known:nn { nV , nv , no }
 \cs_new_protected:Npn \@@_set_known:nnn #1#2#3
   {
-    \use:x
+    \use:e
       {
         \bool_set_true:N \exp_not:N \l_@@_only_known_bool
         \bool_set_false:N \exp_not:N \l_@@_filtered_bool
@@ -2506,32 +2505,30 @@
 %   also apply here. We have a bit more shuffling to do to keep everything
 %   nestable.
 %    \begin{macrocode}
-\cs_new_protected:Npn \keys_set_filter:nnnN #1#2#3#4
+\cs_new_protected:Npn \keys_set_filter:nnnN
   {
-    \exp_args:No \@@_set_filter:nnnnnN
-      \l_@@_unused_clist
-        \q_@@_no_value {#1} {#2} {#3} #4
+    \exp_args:No \@@_set_filter:nnnnnN \l_@@_unused_clist \q_@@_no_value
   }
 \cs_generate_variant:Nn \keys_set_filter:nnnN { nnV , nnv , nno }
-\cs_new_protected:Npn \keys_set_filter:nnnnN #1#2#3#4#5
+\cs_new_protected:Npn \keys_set_filter:nnnnN #1#2#3#4
   {
     \exp_args:No \@@_set_filter:nnnnnN
-      \l_@@_unused_clist {#4} {#1} {#2} {#3} #5
+      \l_@@_unused_clist {#4} {#1} {#2} {#3}
   }
 \cs_generate_variant:Nn \keys_set_filter:nnnnN { nnV , nnv , nno }
 \cs_new_protected:Npn \@@_set_filter:nnnnnN #1#2#3#4#5#6
   {
     \clist_clear:N \l_@@_unused_clist
     \@@_set_filter:nnnn {#2} {#3} {#4} {#5}
-    \tl_set:Nx #6 { \exp_not:o \l_@@_unused_clist }
+    \cs_set_eq:NN #6 \l_@@_unused_clist
     \tl_set:Nn \l_@@_unused_clist {#1}
   }
-\cs_new_protected:Npn \keys_set_filter:nnn #1#2#3
-  {\@@_set_filter:nnnn \q_@@_no_value {#1} {#2} {#3} }
+\cs_new_protected:Npn \keys_set_filter:nnn
+  {\@@_set_filter:nnnn \q_@@_no_value }
 \cs_generate_variant:Nn \keys_set_filter:nnn { nnV , nnv , nno }
 \cs_new_protected:Npn \@@_set_filter:nnnn #1#2#3#4
   {
-    \use:x
+    \use:e
       {
         \bool_set_false:N \exp_not:N \l_@@_only_known_bool
         \bool_set_true:N \exp_not:N \l_@@_filtered_bool
@@ -2550,13 +2547,12 @@
   }
 \cs_new_protected:Npn \keys_set_groups:nnn #1#2#3
   {
-    \use:x
+    \use:e
       {
         \bool_set_false:N \exp_not:N \l_@@_only_known_bool
         \bool_set_false:N \exp_not:N \l_@@_filtered_bool
         \bool_set_true:N \exp_not:N \l_@@_selective_bool
-        \tl_set:Nn \exp_not:N \l_@@_relative_tl
-          { \exp_not:N \q_@@_no_value }
+        \cs_set_eq:NN \exp_not:N \l_@@_relative_tl \exp_not:N \q_@@_no_value
         \@@_set_selective:nnn \exp_not:n { {#1} {#2} {#3} }
         \bool_if:NT \l_@@_only_known_bool
           { \bool_set_true:N \exp_not:N \l_@@_only_known_bool }
@@ -2588,7 +2584,7 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_set_keyval:n, \@@_set_keyval:nn}
-% \begin{macro}{\@@_set_keyval:nnn, \@@_set_keyval:onn}
+% \begin{macro}{\@@_set_keyval:nnn}
 % \begin{macro}{\@@_find_key_module:wNN}
 % \begin{macro}
 %   {
@@ -2606,23 +2602,24 @@
 \cs_new_protected:Npn \@@_set_keyval:n #1
   {
     \bool_set_true:N \l_@@_no_value_bool
-    \@@_set_keyval:onn \l_@@_module_str {#1} { }
+    \exp_args:No \@@_set_keyval:nnn \l_@@_module_str {#1} { }
   }
-\cs_new_protected:Npn \@@_set_keyval:nn #1#2
+\cs_new_protected:Npn \@@_set_keyval:nn
   {
     \bool_set_false:N \l_@@_no_value_bool
-    \@@_set_keyval:onn \l_@@_module_str {#1} {#2}
+    \exp_args:No \@@_set_keyval:nnn \l_@@_module_str
   }
 %    \end{macrocode}
 %   The key path here can be fully defined, after which there is a search
 %   for the key and module names: the user may have passed them with part
 %   of what is actually the module (for our purposes) in the key name. As
 %   that happens on a per-key basis, we use the stack approach to restore
-%   the module name without a group.
+%   the module name without a group. The first argument to |\@@_set_keyval:nnn|
+%   should always be a string.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_set_keyval:nnn #1#2#3
   {
-    \tl_set:Nx \l_keys_path_str
+    \cs_set_nopar:Npx \l_keys_path_str
       {
         \tl_if_blank:nF {#1}
           { #1 / }
@@ -2637,18 +2634,17 @@
     \bool_if:NTF \l_@@_selective_bool
       \@@_set_selective:
       \@@_execute:
-    \str_set:Nn \l_@@_module_str {#1}
+    \cs_set_nopar:Npn \l_@@_module_str {#1}
   }
-\cs_generate_variant:Nn \@@_set_keyval:nnn { o }
 %    \end{macrocode}
 %   This function uses \cs{cs_set_nopar:Npx} internally for performance reasons,
 %   the argument |#1| is already a string in every usage, so turning it into a
 %   string again seems unnecessary.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_find_key_module:wNN #1 \s_@@_stop #2 #3
+\cs_new_protected:Npn \@@_find_key_module:wNN #1 \s_@@_stop #2
   {
     \@@_find_key_module_auxi:Nw #2 #1 \s_@@_nil \@@_find_key_module_auxii:Nw
-      / \s_@@_nil \@@_find_key_module_auxiv:Nw #3
+      / \s_@@_nil \@@_find_key_module_auxiv:Nw
   }
 \cs_new_protected:Npn \@@_find_key_module_auxi:Nw #1 #2 / #3 \s_@@_nil #4
   {
@@ -2809,7 +2805,7 @@
         \cs_if_exist:cT
           { \c_@@_code_root_str ##1 / \l_keys_key_str }
           {
-            \str_set:Nn \l_@@_inherit_str {##1}
+            \cs_set_nopar:Npn \l_@@_inherit_str {##1}
             \cs_if_exist_use:c { \c_@@_validate_root_str ##1 / \l_keys_key_str }
             \@@_execute:no { ##1 / \l_keys_key_str } \l_keys_value_tl
             \clist_map_break:n \use_none:n
@@ -2887,14 +2883,14 @@
   }
 \cs_new_protected:Npn \@@_store_unused_aux:
   {
-    \tl_set:Nx \l_@@_relative_tl
+    \cs_set_nopar:Npx \l_@@_relative_tl
       { \exp_args:No \@@_trim_spaces:n \l_@@_relative_tl }
-    \use:x
+    \use:e
       {
         \cs_set_protected:Npn \@@_store_unused:w
-          ####1 \l_@@_relative_tl /
-          ####2 \l_@@_relative_tl /
-          ####3 \s_@@_stop
+          ##1 \l_@@_relative_tl /
+          ##2 \l_@@_relative_tl /
+          ##3 \s_@@_stop
       }
         {
           \tl_if_blank:nF {##1}
@@ -2905,12 +2901,17 @@
             }
           \clist_put_right:Nx \l_@@_unused_clist
             {
-              \exp_not:n {##2}
+%    \end{macrocode}
+%   The |##2| here is always a string, either from |\l_keys_path_str| or from a
+%   |\l_@@_relative_tl| which contains a string in case |\@@_store_unused_aux:|
+%   is called.
+%    \begin{macrocode}
+              ##2
               \bool_if:NF \l_@@_no_value_bool
                 { = { \exp_not:o \l_keys_value_tl } }
             }
         }
-    \use:x
+    \use:e
       {
         \@@_store_unused:w \l_keys_path_str
           \l_@@_relative_tl / \l_@@_relative_tl /
@@ -2931,13 +2932,13 @@
 %   when a choice is first made. So there is no need for any escape code.
 %   For multiple choices, the same code ends up used in a mapping.
 %    \begin{macrocode}
-\cs_new:Npn \@@_choice_find:n #1
+\cs_new:Npn \@@_choice_find:n
   {
     \str_if_empty:NTF \l_@@_inherit_str
-      { \@@_choice_find:nn \l_keys_path_str {#1} }
+      { \@@_choice_find:nn \l_keys_path_str }
       {
         \@@_choice_find:nn
-          { \l_@@_inherit_str / \l_keys_key_str } {#1}
+          { \l_@@_inherit_str / \l_keys_key_str }
       }
   }
 \cs_new:Npn \@@_choice_find:nn #1#2
