--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -1563,7 +1563,7 @@
     \cs_new_eq:cN { @@_parse_mix_ #6 :nw } \@@_parse_mix_gray:nw
     \cs_new:cpn { @@_parse_model_ #6 :w } ##1 , ##2 \s_@@_stop
       { {#6} { \@@_parse_number:n {##1} } }
-    \cs_new_protected:cpx { @@_backend_ #6 :n } ##1
+    \cs_new_protected:cpx { @@_backend_select_ #6 :n } ##1
       {
         \@@_backend_family_separation:nn
           { l3color \int_use:N \g_@@_separation_int } {##1}
