--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1271,10 +1271,7 @@
 %
 % \begin{macro}{\__kernel_tl_set:Nx,\__kernel_tl_gset:Nx}
 %   These two are supplied to get better performance for macros which would
-%   otherwise use \cs{tl_set:Nx} or \cs{tl_gset:Nx} internally. Not every macro
-%   in this module uses \cs{__kernel_tl_set:Nx} or \cs{__kernel_tl_gset:Nx}
-%   instead of \cs{cs_set_nopar:cpx} or \cs{cs_gset_nopar:Npx} to avoid circular
-%   definitions if \pkg{l3debug} is used.
+%   otherwise use \cs{tl_set:Nx} or \cs{tl_gset:Nx} internally.
 %    \begin{macrocode}
 \cs_new_eq:NN \__kernel_tl_set:Nx \cs_set_nopar:Npx
 \cs_new_eq:NN \__kernel_tl_gset:Nx \cs_gset_nopar:Npx
@@ -1295,7 +1292,9 @@
 % \end{macro}
 %
 % \begin{macro}{\tl_const:Nn, \tl_const:Nx, \tl_const:cn, \tl_const:cx}
-%   Constants are also easy to generate.
+%   Constants are also easy to generate. They use \cs{cs_gset_nopar:Npx} instead
+%   of \cs{__kernel_tl_gset:Nx} so that the correct scope checking is applied if
+%   \pkg{l3debug} is used.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_const:Nn #1#2
   {
@@ -1443,17 +1442,17 @@
 %   \enquote{by hand} as it is used quite a lot.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_set:Nn #1#2
-  { \cs_set_nopar:Npx #1 { \__kernel_exp_not:w {#2} } }
+  { \__kernel_tl_set:Nx #1 { \__kernel_exp_not:w {#2} } }
 \cs_new_protected:Npn \tl_set:No #1#2
-  { \cs_set_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN {#2} } }
+  { \__kernel_tl_set:Nx #1 { \__kernel_exp_not:w \exp_after:wN {#2} } }
 \cs_new_protected:Npn \tl_set:Nx #1#2
-  { \cs_set_nopar:Npx #1 {#2} }
+  { \__kernel_tl_set:Nx #1 {#2} }
 \cs_new_protected:Npn \tl_gset:Nn #1#2
-  { \cs_gset_nopar:Npx #1 { \__kernel_exp_not:w {#2} } }
+  { \__kernel_tl_gset:Nx #1 { \__kernel_exp_not:w {#2} } }
 \cs_new_protected:Npn \tl_gset:No #1#2
-  { \cs_gset_nopar:Npx #1 { \__kernel_exp_not:w \exp_after:wN {#2} } }
+  { \__kernel_tl_gset:Nx #1 { \__kernel_exp_not:w \exp_after:wN {#2} } }
 \cs_new_protected:Npn \tl_gset:Nx #1#2
-  { \cs_gset_nopar:Npx #1 {#2} }
+  { \__kernel_tl_gset:Nx #1 {#2} }
 \cs_generate_variant:Nn \tl_set:Nn  {         NV , Nv , Nf }
 \cs_generate_variant:Nn \tl_set:Nx  { c }
 \cs_generate_variant:Nn \tl_set:Nn  { c, co , cV , cv , cf }
