[WIP] Implement \tl_map_function_unbraced:Nn
With variants \tl_map_function_unbraced:NN and
\tl_map_function_unbraced:cN.

Also implement \tl_map_function_unbraced:Nn.

These are basically the same as the \tl_map_function:Nn family, but
without #1 receiving #2 braced. Careful use of this macro allows for
cleanly mapping multi-argument functions.

TODO: The docs here are sucky, but I wrote this months ago and haven't
been LaTeXing enough to feel out better wording that isn't incorrect.
This is a useful macro, even if a bit awkward & subtle to describe.

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -550,6 +550,29 @@
 %   \texttt{n}-type arguments. See also \cs{tl_map_function:NN}.
 % \end{function}
 %
+% \begin{function}[updated = 2020-10-30, rEXP]
+%   {\tl_map_function_unbraced:NN, \tl_map_function_unbraced:cN}
+%   \begin{syntax}
+%     \cs{tl_map_function_unbraced:NN} \meta{tl~var} \meta{function}
+%   \end{syntax}
+%   Applies \meta{function} to every \meta{item} in the \meta{tl~var}.
+%   The \meta{function} receives one unbraced argument for each iteration.
+%   This may be a number of tokens if the \meta{item} was stored within
+%   braces. Hence the \meta{function} should anticipate receiving
+%   \texttt{n}-type arguments. See also \cs{tl_map_function_unbraced:nN}.
+% \end{function}
+%
+% \begin{function}[updated = 2020-10-30, rEXP]{\tl_map_function_unbraced:nN}
+%   \begin{syntax}
+%     \cs{tl_map_function_unbraced:nN} \Arg{token list} \meta{function}
+%   \end{syntax}
+%   Applies \meta{function} to every \meta{item} in the \meta{token list},
+%   The \meta{function} receives one unbraced argument for each iteration.
+%   This may be a number of tokens if the \meta{item} was stored within
+%   braces. Hence the \meta{function} should anticipate receiving
+%   \texttt{n}-type arguments. See also \cs{tl_map_function_unbraced:NN}.
+% \end{function}
+%
 % \begin{function}[updated = 2012-06-29]
 %   {\tl_map_inline:Nn, \tl_map_inline:cn}
 %   \begin{syntax}
@@ -2479,6 +2502,32 @@
     #1 {#2} \@@_map_function:Nn #1
   }
 \cs_generate_variant:Nn \tl_map_function:NN { c }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\tl_map_function_unbraced:nN}
+% \begin{macro}{\tl_map_function_unbraced:NN, \tl_map_function_unbraced:cN}
+% \begin{macro}{\@@_map_function_unbraced:Nn}
+%   Expandable loop macro for token lists. These have the advantage of not
+%   needing to test if the argument is empty, because if it is, the stop
+%   marker is read immediately and the loop terminated.
+%    \begin{macrocode}
+\cs_new:Npn \tl_map_function_unbraced:nN #1#2
+  {
+    \@@_map_function_unbraced:Nn #2 #1
+      \q_@@_recursion_tail
+    \prg_break_point:Nn \tl_map_break: { }
+  }
+\cs_new:Npn \tl_map_function_unbraced:NN
+  { \exp_args:No \tl_map_function_unbraced:nN }
+\cs_new:Npn \@@_map_function_unbraced:Nn #1#2
+  {
+    \@@_if_recursion_tail_break:nN {#2} \tl_map_break:
+    #1 #2 \@@_map_function_unbraced:Nn #1
+  }
+\cs_generate_variant:Nn \tl_map_function_unbraced:NN { c }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
