[WIP] Implement \tl_map_inline:npn
With internal \@@_map_inline:nnn & variants \tl_map_inline:Npn and
\tl_map_inline:cpn.

It's like \tl_map_inline:nn, but you can supply a consistent number of
arguments (of your choosing) in the token list, match your parameters,
and map using multiple arguments instead of just one! It's really handy
when factoring out slightly more complex templates.

Theoretically, \tl_map_inline:nn could be a simple wrapper of this, but
do we want to rely on \tl_map_function_unbraced:Nn when we don't have
to?

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -573,6 +573,27 @@
 %   \texttt{n}-type arguments. See also \cs{tl_map_function_unbraced:NN}.
 % \end{function}
 %
+% \begin{function}[updated = 2020-10-30]
+%   {\tl_map_inline:Npn, \tl_map_inline:cpn}
+%   \begin{syntax}
+%     \cs{tl_map_inline:Npn} \meta{tl~var} \meta{parameters} \Arg{inline function}
+%   \end{syntax}
+%   Applies the \meta{inline function} to every \meta{item} stored within the
+%   \meta{tl~var}. The \meta{inline function} should consist of code which
+%   receives the \meta{item} unbraced as \meta{parameters} (|#1|, |#2|, \emph{etc.}).
+%   See also \cs{tl_map_function_unbraced:NN}.
+% \end{function}
+%
+% \begin{function}[updated = 2020-10-30]{\tl_map_inline:npn}
+%   \begin{syntax}
+%     \cs{tl_map_inline:npn} \Arg{token list} \meta{parameters} \Arg{inline function}
+%   \end{syntax}
+%   Applies the \meta{inline function} to every \meta{item} stored within the
+%   \meta{token list}. The \meta{inline function} should consist of code which
+%   receives the \meta{item} unbraced as \meta{parameters} (|#1|, |#2|, \emph{etc.}).
+%   See also \cs{tl_map_function_unbraced:nN}.
+% \end{function}
+%
 % \begin{function}[updated = 2012-06-29]
 %   {\tl_map_inline:Nn, \tl_map_inline:cn}
 %   \begin{syntax}
@@ -2530,6 +2551,33 @@
 \cs_generate_variant:Nn \tl_map_function_unbraced:NN { c }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\tl_map_inline:npn, \@@_map_inline:nnn}
+% \begin{macro}{\tl_map_inline:Npn, \tl_map_inline:cpn}
+%   The inline functions are straight forward by now. We use a little
+%   trick with the counter \cs{g__kernel_prg_map_int} to make
+%   them nestable. We can also make use of \cs{@@_map_function:Nn}
+%   from before.
+%    \begin{macrocode}
+\cs_new_protected:Npn \tl_map_inline:npn #1#2#
+  { \@@_map_inline:nnn {#1} {#2} }
+\cs_new_protected:Npn \@@_map_inline:nnn #1#2#3 
+  {
+    \int_gincr:N \g__kernel_prg_map_int
+    \cs_gset_protected:cpn
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :w } #2 {#3}
+    \exp_args:Nc \@@_map_function_unbraced:Nn
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
+      #1 \q_@@_recursion_tail
+    \prg_break_point:Nn \tl_map_break:
+      { \int_gdecr:N \g__kernel_prg_map_int }
+  }
+\cs_new_protected:Npn \tl_map_inline:Npn
+  { \exp_args:No \tl_map_inline:npn }
+\cs_generate_variant:Nn \tl_map_inline:Npn { c }
+%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
